# yandex-interview

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml  readme_ru.md
tests/: test_data_const.py
tests/functional/pet/: conftest.py  get_pet_test.py  post_pet_test.py
tests/json_schemas/: get_pet.json  get_pet_error.json  post_pet.json
utils/: api.py  const_error.py  data_utils.py  logger.py
