[tool.poetry]
name = "yandex-interview"
version = "0.1.0"
description = "Test assignment at the interview"
authors = ["Artem Belov"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.0"
requests = "^2.27.1"
black = "^22.1.0"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "positive: marks tests as positive cases",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]